# PodcastTool

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  Pipfile  README.rst  __init__.py  build.sh  entrypoint.py  pyproject.toml  requirements-dev.txt  run_podcast.sh  setup.cfg  setup.py  setup.sh
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: .catalog_names.json  .missing_ffmpeg.md  Makefile  conf.py  index.rst
include/img/: app.icns
include/scripts/: build_linux.sh  create_desktop.sh  setup_app.sh
make app/: create_app.sh
make_shortcut/: create_app.sh  readme.md
resources/: __init__.py
resources/docs/: mac_missing_ffmpeg.md
resources/samples/: readme.md  readme.txt
resources/scripts/: build_linux.sh  create_desktop.sh  desktop_shortcut.sh  podcasttool.sh  podcasttoolrc.sh  startup.sh
scripts/: podcasttool.sh  run.sh  run_me.sh  startup.sh  utils.sh
send separately /: setup_podcast.sh
src/: .server_credentials.json  GUI.py  __init__.py  class.txt  cli.py  generate_podcast.py  generate_podcast_copy.py  gui-app.py  logger.py  main.py  podcasttools.py  startup.py  tempCodeRunnerFile.py  test.py  util.py  utility.py
src/app/: __init__.py  colors.py  dialog.py  geometry.py
src/gui/: generate_podcast.py  main_gui.py  utility.py
src/podcasttool/: __init__.py  _create_audio_library.py  catalog_names.json  gui.py  gui_launch.py  logger.py  podcasttools.py  skeleton.py  util.py
src/resources/: __init__.py
src/tools/: __init__.py  cli.py  html.py  podcasttools.py  server.py
tests/: conftest.py  test_main.py  test_skeleton.py
(+28 files in other folders)
