[tool.poetry]
name = "podcasttool"
version = "2.4.0"
description = ""
authors = ["virgilsisoe <virgilsisoe@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "~3.9"
pydub = "^0.25.1"
regex = "^2022.10.31"
gtts = "^2.2.4"
py2app = "^0.28.4"
pyinstaller = "^5.6.2"
textblob = "^0.17.1"

[tool.isort]
length_sort = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
